// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home change home route should render a link to change the default route in advanced settings if advanced settings is enabled 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home directories should not render directory entry when showOnHomePage is false 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home directories should render ADMIN directory entry in "Manage your data" panel 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={
            Array [
              Object {
                "category": "admin",
                "description": "Manage the index patterns that help retrieve your data from Elasticsearch.",
                "icon": "indexPatternApp",
                "id": "index_patterns",
                "path": "index_management_landing_page",
                "showOnHomePage": true,
                "title": "Index Patterns",
              },
            ]
          }
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home directories should render DATA directory entry in "Ingest your data" panel 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={
            Array [
              Object {
                "category": "data",
                "description": "Display and share a collection of visualizations and saved searches.",
                "icon": "dashboardApp",
                "id": "dashboard",
                "path": "dashboard_landing_page",
                "showOnHomePage": true,
                "title": "Dashboard",
              },
            ]
          }
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home directories should render solutions in the "solution section" 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={4}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <SolutionsSection
      addBasePath={[Function]}
      directories={Array []}
      solutions={
        Array [
          Object {
            "appDescriptions": Array [
              "Analyze data in dashboards",
            ],
            "icon": "logoKibana",
            "id": "kibana",
            "order": 1,
            "path": "kibana_landing_page",
            "subtitle": "Visualize & analyze",
            "title": "Kibana",
          },
          Object {
            "appDescriptions": Array [
              "Example use case",
            ],
            "icon": "empty",
            "id": "solution-2",
            "order": 2,
            "path": "path-to-solution-two",
            "subtitle": "Subtitle for solution two",
            "title": "Solution two",
          },
          Object {
            "appDescriptions": Array [
              "Example use case",
            ],
            "icon": "empty",
            "id": "solution-3",
            "order": 3,
            "path": "path-to-solution-three",
            "subtitle": "Subtitle for solution three",
            "title": "Solution three",
          },
          Object {
            "appDescriptions": Array [
              "Example use case",
            ],
            "icon": "empty",
            "id": "solution-4",
            "order": 4,
            "path": "path-to-solution-four",
            "subtitle": "Subtitle for solution four",
            "title": "Solution four",
          },
        ]
      }
    />
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home header render 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home header should show "Dev tools" link if console is available 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={
            Array [
              Object {
                "category": "admin",
                "description": "Skip cURL and use a JSON interface to work with your data in Console.",
                "icon": "consoleApp",
                "id": "console",
                "path": "path-to-dev-tools",
                "showOnHomePage": false,
                "title": "Console",
              },
            ]
          }
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home header should show "Manage" link if stack management is available 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home isNewKibanaInstance should safely handle execeptions 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home isNewKibanaInstance should set isNewKibanaInstance to false when there are index patterns 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home isNewKibanaInstance should set isNewKibanaInstance to true when there are no index patterns 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home should render home component 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home welcome should show the normal home page if loading fails 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home welcome should show the normal home page if welcome screen is disabled locally 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;

exports[`home welcome should show the welcome screen if enabled, and there are no index patterns defined 1`] = `
<Welcome
  onSkip={[Function]}
  urlBasePath="goober"
/>
`;

exports[`home welcome stores skip welcome setting if skipped 1`] = `
<main
  aria-labelledby="kbnOverviewPageHeader__title"
  className="homWrapper"
  data-test-subj="homeApp"
>
  <mockConstructor
    addBasePath={[Function]}
    overlap={0}
    showDevToolsLink={true}
    showManagementLink={true}
    title={
      <FormattedMessage
        defaultMessage="Home"
        id="home.header.title"
        values={Object {}}
      />
    }
  />
  <div
    className="homContent"
  >
    <EuiFlexGroup
      className="homData homData--expanded"
    >
      <EuiFlexItem>
        <AddData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <ManageData
          addBasePath={[Function]}
          features={Array []}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule
      aria-hidden="true"
      margin="xl"
    />
    <mockConstructor
      addBasePath={[Function]}
      onChangeDefaultRoute={[Function]}
      onSetDefaultRoute={[Function]}
      path="/app/home"
    />
  </div>
</main>
`;
